# mandelbrot_set

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  vcpkg.json
include/: StableIterationsContainer.hpp  VisualizationRange.hpp
src/: StableIterationsContainer.cpp
tests/: CMakeLists.txt  StableIterationsContainerTests.cpp  VisualizationRangeTests.cpp  smoke_test.cpp
